--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: rgb(181, 217, 244);
+  background-color: rgb(31, 31, 31);
   height: 97vh;
   padding-top: 25px;
   text-align: center;
@@ -44,6 +44,12 @@
 
 /* ***********************   My CSS  ******************************  */
 
+.wrapper{
+  display: flex;
+  justify-content: space-around;
+  padding-top: 70px;
+}
+
 
 .form-container{
   width: 400px;
@@ -52,7 +58,7 @@
   background-color: rgb(247, 252, 255);
   padding-top: 0px;
   border-radius: 8px;
-  box-shadow: 6px 6px 20px rgba(28, 28, 28, 0.153);
+  box-shadow: 6px 6px 10px rgb(14, 14, 14);
 }
 
 .form-container h1{
@@ -60,7 +66,7 @@
   width: 300px;
   margin: 0 auto;
   margin-top: 40px;
-  border-bottom: 1px solid rgba(36, 36, 36, 0.523);
+  border-bottom: 1px solid rgb(21, 21, 21);
   padding-bottom: 15px;
 }
 
@@ -73,5 +79,38 @@
   background-color: rgb(56, 146, 184);
   border: none;
   border-radius: 5px;
-  box-shadow: 9px 6px 12px rgba(91, 91, 91, 0.404);
+  box-shadow: 2px 6px 12px rgba(16, 16, 16, 0.404);
+}
+
+.split-right{
+  color: black;
+  width: 400px;
+  height: 500px;
+  margin: 0 auto;
+  background-color: rgb(247, 252, 255);
+  padding-top: 0px;
+  border-radius: 8px;
+  box-shadow: 6px 6px 10px rgb(18, 18, 18);
+}
+
+.split-right h1{
+  padding-top: 50px;
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 40px;
+  border-bottom: 1px solid rgba(36, 36, 36, 0.523);
+  padding-bottom: 15px;
+}
+
+.details{
+  width: 700px;
+  height: 500px;
+  color: aliceblue;
+  margin: 0 auto;
+  border: 1px solid aliceblue;
+  margin-top: 50px;
+}
+
+.details h1{
+  margin-top: 50px;
 }
